--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^7.3.2",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
+    "expo-checkbox": "^4.1.4",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
